BUG#31563: Semi-joins: pullout of functionally-dependent tables is not transitive Make eq_ref-based table pull-out be transitive.